[gd_scene format=3 uid="uid://dlio4k2m1clo0"]

[ext_resource type="Script" uid="uid://bb0xvn2x6ykc" path="res://scripts/title_screen.gd" id="1_3yumr"]
[ext_resource type="Texture2D" uid="uid://c12k4tsdh4553" path="res://assets/ui/title screen/play_button.png" id="1_fgkus"]
[ext_resource type="Texture2D" uid="uid://cbaxkd3jcpbgq" path="res://assets/ui/title screen/background.png" id="1_sa3yf"]
[ext_resource type="Texture2D" uid="uid://dwvosqrt1t8wv" path="res://assets/ui/title screen/game_logo.png" id="2_e54dn"]
[ext_resource type="Texture2D" uid="uid://2aswnj4everf" path="res://assets/ui/title screen/aviso.png" id="3_cs5ya"]
[ext_resource type="Texture2D" uid="uid://btj0jksmef4xi" path="res://assets/ui/title screen/arcade_button.png" id="4_3yumr"]
[ext_resource type="Texture2D" uid="uid://beq2hxf1ha0hk" path="res://assets/ui/title screen/alert.png" id="4_mykxm"]
[ext_resource type="Texture2D" uid="uid://mayp88ufcjr1" path="res://assets/ui/title screen/account_button.png" id="5_cs5ya"]
[ext_resource type="Texture2D" uid="uid://bi0j224rv8d0r" path="res://assets/ui/title screen/exit_button.png" id="6_mykxm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4qe4i"]
atlas = ExtResource("4_mykxm")
region = Rect2(0, 0, 9, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_p07av"]
atlas = ExtResource("4_mykxm")
region = Rect2(0, 15, 9, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_khjys"]
atlas = ExtResource("4_mykxm")
region = Rect2(0, 30, 9, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_174rq"]
atlas = ExtResource("4_mykxm")
region = Rect2(0, 45, 9, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrxh4"]
atlas = ExtResource("4_mykxm")
region = Rect2(0, 60, 9, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_neciy"]
atlas = ExtResource("4_mykxm")
region = Rect2(0, 75, 9, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_w03br"]
atlas = ExtResource("4_mykxm")
region = Rect2(0, 90, 9, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr68i"]
atlas = ExtResource("4_mykxm")
region = Rect2(0, 105, 9, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_b344i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qe4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p07av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khjys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_174rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrxh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neciy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w03br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr68i")
}],
"loop": true,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_sa3yf"]
atlas = ExtResource("1_fgkus")
region = Rect2(0, 0, 59, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4lrb"]
atlas = ExtResource("1_fgkus")
region = Rect2(0, 15, 59, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_tklts"]
atlas = ExtResource("4_3yumr")
region = Rect2(0, 0, 59, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_u26n3"]
atlas = ExtResource("4_3yumr")
region = Rect2(0, 15, 59, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib7db"]
atlas = ExtResource("5_cs5ya")
region = Rect2(0, 0, 59, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_frs5l"]
atlas = ExtResource("5_cs5ya")
region = Rect2(0, 15, 59, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_mynnq"]
atlas = ExtResource("6_mykxm")
region = Rect2(0, 0, 59, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8tpv"]
atlas = ExtResource("6_mykxm")
region = Rect2(0, 15, 59, 14)

[node name="title_screen" type="Control" unique_id=1361922503]
layout_mode = 3
anchor_right = 0.27800003
anchor_bottom = 0.27800003
offset_right = -0.25604248
offset_bottom = -0.14401245
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3yumr")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1484754437]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sa3yf")
stretch_mode = 2

[node name="aviso" type="TextureRect" parent="." unique_id=1769729711]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.040625
anchor_top = 0.7888889
anchor_right = 0.71875
anchor_bottom = 0.9074011
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_cs5ya")
expand_mode = 5
metadata/_edit_use_anchors_ = true

[node name="alert" type="AnimatedSprite2D" parent="." unique_id=236460891]
position = Vector2(77, 105)
sprite_frames = SubResource("SpriteFrames_b344i")
autoplay = "default"
frame_progress = 0.2275563

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1085786085]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.27800003
anchor_bottom = 0.27800003
offset_right = -0.25604248
offset_bottom = -0.14401245
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=751952502]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=237637459]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=76634957]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_e54dn")

[node name="play" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=1208263749]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = SubResource("AtlasTexture_sa3yf")
texture_pressed = SubResource("AtlasTexture_s4lrb")

[node name="arcade" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=1009763490]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = SubResource("AtlasTexture_tklts")
texture_pressed = SubResource("AtlasTexture_u26n3")

[node name="account" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=401681227]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = SubResource("AtlasTexture_ib7db")
texture_pressed = SubResource("AtlasTexture_frs5l")

[node name="exit" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=611464560]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = SubResource("AtlasTexture_mynnq")
texture_pressed = SubResource("AtlasTexture_e8tpv")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1274320101]
position = Vector2(160, 90)
zoom = Vector2(3.6, 3.6)

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/arcade" to="." method="_on_arcade_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/account" to="." method="_on_account_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
